--- a/03_PythonBasics.ipynb
+++ b/03_PythonBasics.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,8 @@
       "1234567\n",
       "01234\n",
       "5\n",
-      "76543210\n"
+      "76543210\n",
+      "5\n"
      ]
     }
    ],
@@ -365,7 +366,80 @@
     "print(selfish_num[1:]) # prints the whole string because there is no \"stop\" index\n",
     "print(selfish_num[:5]) # stop at index 5\n",
     "print(selfish_num[-3]) # indexing from the back\n",
-    "print(selfish_num[::-1]) # prints string in reverse order"
+    "print(selfish_num[::-1]) # prints string in reverse order\n",
+    "\n",
+    "print(len('hello')) # starts from 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is my name\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "quote = \"this is my name\"\n",
+    "\n",
+    "print(quote.capitalize()) # captilizes first letter\n",
+    "print(quote.find(\"my\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You age is 26\n"
+     ]
+    }
+   ],
+   "source": [
+    "birth_year = input(\"What year were you born?\")\n",
+    "age = 2022 - int(birth_year)\n",
+    "\n",
+    "print(f\"You age is {age}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, navalente. Your password is 4 characters long: ****\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Password excercise\n",
+    "\n",
+    "username = input(\"Enter a username \\n\")\n",
+    "password = input(\"Enter a password \\n\")\n",
+    "convert_password = \"*\" * len(password) # converting password length to stars\n",
+    "\n",
+    "print(f\"Hi, {username}. Your password is {len(password)} characters long: {convert_password}\")"
    ]
   }
  ],
