--- a/03_PythonBasics.ipynb
+++ b/03_PythonBasics.ipynb
@@ -441,6 +441,81 @@
     "\n",
     "print(f\"Hi, {username}. Your password is {len(password)} characters long: {convert_password}\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lists\n",
+    "\n",
+    "List is a form of an array from other languages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making sample lists\n",
+    "li = [1,2,3,4,5]\n",
+    "li2 = ['a','b','c','d']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "notebooks\n",
+      "sunglasses\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data structure\n",
+    "amazon_cart  = [\"notebooks\",\"sunglasses\"]\n",
+    "print(amazon_cart[0]), print(amazon_cart[1]);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sunglasses', 'toys']\n",
+      "['laptop', 'toys']\n"
+     ]
+    }
+   ],
+   "source": [
+    "amazon_cart  = [\"notebooks\",\n",
+    "                \"sunglasses\",\n",
+    "                \"toys\",\n",
+    "                \"grapes\",\n",
+    "]\n",
+    "\n",
+    "amazon_cart[0] = \"laptop\" # lists are re-writable\n",
+    "print(amazon_cart[1:3])\n",
+    "print(amazon_cart[0::2])\n"
+   ]
   }
  ],
  "metadata": {
